kcloud-infra-optimization/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kcloud
  labels:
    name: kcloud
    app.kubernetes.io/managed-by: kustomize
    environment: base
